# CS-HUJI-C-C-

./: README.md
ex1-ido.dotan/: CMakeLists.txt  cipher  cipher.c  main.c  tests.c
ex2-ido.dotan/: CMakeLists.txt  main.c  sort_bus_lines.c  sort_bus_lines.h  sort_lines  test_bus_lines.c  test_bus_lines.h
ex3a-ido.dotan/: CMakeLists.txt  markov_chain.c  markov_chain.h  tests.c  tweets_generator  tweets_generator.c
ex3b-ido.dotan/: CMakeLists.txt  makefile  markov_chain.c  markov_chain.h  snakes_and_ladders  snakes_and_ladders.c  tweets_generator  tweets_generator.c
ex4-ido.dotan/: Activation.cpp  Activation.h  CMakeLists.txt  Dense.cpp  Dense.h  Makefile  Matrix.cpp  Matrix.h  MlpNetwork.cpp  MlpNetwork.h  main.cpp  mlpnetwork  my_program
ex5-ido.dotan/: CMakeLists.txt  Movie.cpp  Movie.h  RecommendationSystem.cpp  RecommendationSystem.h  RecommendationSystemLoader.cpp  RecommendationSystemLoader.h  User.cpp  User.h  UsersLoader.cpp  UsersLoader.h  diff.py
